// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert doesn't render if message props is empty 1`] = `<DocumentFragment />`;

exports[`Alert shows error message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert shows success message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Success!
  </div>
</DocumentFragment>
`;
